fixing spacing with missing user photo

--- a/scss/custom/projects.scss
+++ b/scss/custom/projects.scss
@@ -152,7 +152,7 @@ $body-font-size-small-screen: rem-calc(15);
   .user-info {
     @include grid-row($behavior: nest);
 
-    .user-photo {
+    .user-photo img{
       @include grid-column(1);
       padding-right: 0;
     }
